--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # dependencies
 /node_modules
 
+# firebase
+.firebaserc
+.firebase
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
