--- a/projects/angular-keyboard/package.json
+++ b/projects/angular-keyboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-keyboard",
+  "name": "@taskbase/angular-keyboard",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^8.1.3",
