removed char plus added char should yield neutral char

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-keyboard": "ng build angular-keyboard",
+    "watch-keyboard": "ng build angular-keyboard --watch"
   },
   "private": true,
   "dependencies": {
