--- a/projects/angular-keyboard/package.json
+++ b/projects/angular-keyboard/package.json
@@ -1,8 +1,4 @@
 {
   "name": "@taskbase/angular-keyboard",
-  "version": "0.0.7",
-  "peerDependencies": {
-    "@angular/common": "^8.1.3",
-    "@angular/core": "^8.1.3"
-  }
+  "version": "0.0.9"
 }
