--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "ts-node": "7.0.0",
     "tsickle": "0.39.1",
     "tslint": "6.1.3",
-    "typescript": "4.2.4"
+    "typescript": "4.1.x"
   }
 }
