--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "watch-keyboard": "ng build angular-keyboard --watch",
-    "build-keyboard": "ng build angular-keyboard",
+    "build-keyboard": "ng build angular-keyboard --prod",
     "publish-keyboard": "cd dist/angular-keyboard && npm publish",
     "build-and-publish-keyboard": "npm run build-keyboard && npm run publish-keyboard"
   },
