--- a/package.json
+++ b/package.json
@@ -9,46 +9,45 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "watch-keyboard": "ng build angular-keyboard --watch",
-    "build-keyboard": "ng build angular-keyboard",
+    "build-keyboard": "ng build angular-keyboard --prod",
     "publish-keyboard": "cd dist/angular-keyboard && npm publish",
     "build-and-publish-keyboard": "npm run build-keyboard && npm run publish-keyboard"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.3",
-    "@angular/common": "~8.1.3",
-    "@angular/compiler": "~8.1.3",
-    "@angular/core": "~8.1.3",
-    "@angular/forms": "~8.1.3",
-    "@angular/platform-browser": "~8.1.3",
-    "@angular/platform-browser-dynamic": "~8.1.3",
-    "@angular/router": "~8.1.3",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "11.2.10",
+    "@angular/common": "11.2.10",
+    "@angular/compiler": "11.2.10",
+    "@angular/core": "11.2.10",
+    "@angular/forms": "11.2.10",
+    "@angular/platform-browser": "11.2.10",
+    "@angular/platform-browser-dynamic": "11.2.10",
+    "@angular/router": "11.2.10",
+    "codelyzer": "^6.0.1",
+    "rxjs": "6.6.7",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
-    "@angular-devkit/build-ng-packagr": "~0.801.3",
-    "@angular/cli": "~8.1.3",
-    "@angular/compiler-cli": "~8.1.3",
-    "@angular/language-service": "~8.1.3",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^5.1.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tsickle": "^0.35.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "@angular-devkit/build-angular": "~0.1102.9",
+    "@angular-devkit/build-ng-packagr": "^0.1002.0",
+    "@angular/cli": "11.2.9",
+    "@angular/compiler-cli": "11.2.10",
+    "@angular/language-service": "11.2.10",
+    "@types/jasmine": "3.3.8",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "6.3.2",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.0",
+    "ng-packagr": "^11.0.0",
+    "protractor": "7.0.0",
+    "ts-node": "7.0.0",
+    "tslint": "6.1.3",
+    "typescript": "4.1.x"
   }
 }
