--- a/angular.json
+++ b/angular.json
@@ -130,7 +130,7 @@
       "prefix": "tb",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/angular-keyboard/tsconfig.lib.json",
             "project": "projects/angular-keyboard/ng-package.json"
