--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "watch-keyboard": "ng build angular-keyboard --watch",
-    "build-keyboard": "ng build angular-keyboard --prod",
+    "build-keyboard": "ng build angular-keyboard --configuration production",
     "publish-keyboard": "cd dist/angular-keyboard && npm publish",
     "build-and-publish-keyboard": "npm run build-keyboard && npm run publish-keyboard"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.10",
-    "@angular/common": "11.2.10",
-    "@angular/compiler": "11.2.10",
-    "@angular/core": "11.2.10",
-    "@angular/forms": "11.2.10",
-    "@angular/platform-browser": "11.2.10",
-    "@angular/platform-browser-dynamic": "11.2.10",
-    "@angular/router": "11.2.10",
+    "@angular/animations": "12.2.16",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
     "codelyzer": "^6.0.1",
     "rxjs": "6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.9",
-    "@angular/cli": "11.2.9",
-    "@angular/compiler-cli": "11.2.10",
-    "@angular/language-service": "11.2.10",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "12.2.18",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/language-service": "12.2.16",
     "@types/jasmine": "3.3.8",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "^12.11.1",
@@ -43,10 +43,10 @@
     "karma-coverage-istanbul-reporter": "2.0.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
-    "ng-packagr": "^11.0.0",
+    "ng-packagr": "^12.2.7",
     "protractor": "7.0.0",
     "ts-node": "7.0.0",
     "tslint": "6.1.3",
-    "typescript": "4.1.x"
+    "typescript": "4.3.5"
   }
 }
